<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home_app"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_profile_app"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/menu_fav_app"
            android:icon="@drawable/ic_menu_fav"
            android:title="@string/favourite_restaurants" />
        <item
            android:id="@+id/menu_order_history_app"
            android:icon="@drawable/ic_order_history"
            android:title="Order History" />
        <item
            android:id="@+id/menu_faqs_app"
            android:icon="@drawable/ic_menu_faqs"
            android:title="@string/faqs" />
        <item
            android:id="@+id/menu_logOut_app"
            android:icon="@drawable/ic_menu_log"
            android:title="@string/log_out" />
    </group>
</menu>